<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mixare</string>
    <string name="search_hint">Search Location</string>
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    <string name="OSM">Openstreetmap</string>
    <string name="MIXARE">Mixare</string>
    <string name="CIRCLE_MARKER">Circles</string>
    <string name="NAVIGATION_MARKER">Arrows</string>
    <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
    <string name="option_not_available">Sorry, We are working on it... \nThis option will be available soon!</string>
    <string name="license">Copyright (C) 2010- Peer internet solutions 
		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
		or at your option) any later version. 
		\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public 
		License for more details. 
		\n\n You should have received a copy of the GNU General Public License along with this program. 
		If not, see &lt;http://www.gnu.org/licenses/&gt;</string>
    <string name="launch_plugins">Launch plugins?</string>
    <string name="plugin_message">Some plugins where found, do you want to enable them?</string>
    <string name="remember_this_decision">Remember this decision</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_item_1">Data Source</string>
    <string name="menu_item_2">List view</string>
    <string name="menu_item_3">Map view</string>
    <string name="menu_item_4">Zoom level</string>
    <string name="menu_item_5">Search</string>
    <string name="menu_item_6">Info</string>
    <string name="menu_item_7">License</string>
    <string name="cancel">Cancel</string>
    <string name="data_source_edit_err">This data source cannot be edited.</string>
    <string name="data_source_delete_err">This data source cannot be deleted.</string>
    <string name="connection_error_dialog">Sorry, a connection Error occured! \nPlease check if you are connected to the Internet.</string>
    <string name="connection_error_dialog_button1">Retry</string>
    <string name="connection_error_dialog_button2">Open Settings</string>
    <string name="connection_error_dialog_button3">Close App</string>
    <string name="connection_GPS_dialog_text">The GPS location can not be updated... \nIf you continue it could be that the Information 
		\nwill not be displayed in the right place.</string>
    <string name="connection_GPS_dialog_button1">Continue</string>
    <string name="connection_GPS_dialog_button2">Close</string>
    <string name="no_website_available">Sorry, there is no further \ninformation available.</string>
    <string name="license_title">License</string>
    <string name="close_button">Close</string>
    <string name="general_info_title">General Information</string>
    <string name="general_info_text">GPS info: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="altitude">Altitude: </string>
    <string name="speed">Speed: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="gps_last_fix">Last GPS fix: </string>
    <string name="map_menu_normal_mode">Map</string>
    <string name="map_menu_satellite_mode">Satellite</string>
    <string name="map_menu_cam_mode">Camera</string>
    <string name="map_my_location">My Location</string>
    <string name="map_toggle_path_on">Show Path</string>
    <string name="map_toggle_path_off">Hide Path</string>
    <string name="map_current_location_click">Your current location</string>
    <string name="data_source_add">Add data source</string>
    <string name="data_source_edit">Edit data source</string>
    <string name="data_source_delete">Delete data source</string>
    <string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
    <string name="data_source_change_twitter">Changed to Twitter as data source</string>
    <string name="data_source_change_osm">Changed to OpenStreetMap as data source</string>
    <string name="search_failed_notification">No search results</string>
    <string name="source_openstreetmap">Stations around</string>
    <string name="search_active_1">Search on data source</string>
    <string name="search_active_2">. Touch to terminate search</string>
    <string name="download_error">Error while downloading</string>
    <string name="download_received">Received data from</string>
    <string name="add_osm_menu">Add OpenStreetMap URL</string>
    <string name="insert_osm_url">Insert OpenStreetMap URL</string>
    <string name="osm_max_object_menu">Set max POI per URL</string>
    <string name="set_osm_max_object">Maximum POIs per URL</string>
    <string name="location_not_found">Location not found, make sure you enabled Wifi location or GPS in the settings.</string>
    <string name="refreshing">Refreshing</string>
    <string name="foursquare_token" translatable="false">DPQGGAUMTZNJQTEHFIR2VTLH55X3JVLPDUB1VOW0RRIAK0XQ</string>
    <string name="foursquare_secret" translatable="false">GBSOAKFFSXWAAKY1EUCVPHUH52FVRZ1OKEOHOU2M15ONWL54</string>
    <string name="foursquare_venue_prefix" translatable="false">https://api.foursquare.com/v2/venues/</string>
    <string name="foursquare_explore" translatable="false">explore?ll=</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="http">http://</string>
    <string name="data_source">Data source</string>
    <string name="display_as">Display as</string>
    <string name="text">text</string>

</resources>