<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="text" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <TextView
            android:id="@+id/urlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textUri"
            android:text="@string/http" >
        </EditText>

        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/data_source"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/datasourcetypelist" >
        </Spinner>

        <TextView
            android:id="@+id/displaytypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/display_as"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <Spinner
            android:id="@+id/displaytype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:entries="@array/displaytypelist" >
        </Spinner>
    </LinearLayout>

</ScrollView>